--- a/src/views/add_recipe_type.ejs
+++ b/src/views/add_recipe_type.ejs
@@ -57,7 +57,7 @@
         <div class="edit-recipe-type">
             <div class="box gap-40">
                 <h2 class="font chocolate-brown bold big">Adicionar tipo de receita</h2>
-                <form action="/<%= this_user.username %>/add-recipe" method="post">
+                <form action="/<%= this_user.username %>/add-recipe-type/" method="post">
                     <div class="recipe-type-name">
                         <input name="recipe_type_name" id="color-box" type="text" placeholder="Nome do tipo de receita">
                     </div>
