--- a/src/views/profile.ejs
+++ b/src/views/profile.ejs
@@ -96,7 +96,7 @@
                     <div class="meal font supersmall white bold half center">Café da manhã</div>
                     <div class="meal font supersmall white bold half center">Café da manhã</div>
                 </div>
-                <a class="white text-decoration-none" href="/<%= this_user.username %>/add-meal/"><button class="width-100 bg-yellow">Adicionar</button></a>
+                <a class="white text-decoration-none width-100 " href="/<%= this_user.username %>/add-meal/"><button class="width-100 bg-yellow">Adicionar</button></a>
             </div>
             <div class="box third flex-colum space-betweenn gap-10">
                 <div class="width-max height-100 center flex-column max-width">
