Fixed profile responsiveness!

--- a/src/views/profile.ejs
+++ b/src/views/profile.ejs
@@ -55,7 +55,7 @@
             </div>
         </nav>
     </header>
-    <main>
+    <main class="min-100vh gap-30" id="profile">
         <div class="box width-100 padding-zero">
             <img class="main-img" src="<%= this_user.image %>">
             <div>
