--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -33,7 +33,7 @@
         <nav class="header navbar navbar-expand-lg">
             <div class="container-fluid padding-zero">
                 <div class="menu">
-                    <a class="padding-zero margin-zero hover" href="/home/<%= this_user.username %>"><img src="/img/logo-white-green.png"
+                    <a class="padding-zero margin-zero hover" href="/<%= this_user.username %>/home"><img src="/img/logo-white-green.png"
                             class="logo-icon"></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false"
@@ -77,7 +77,7 @@
                                 <img src="/img/people-icon.png">
                                 <span class="font chocolate-brown small">503 seguidores</span>
                             </div>
-                            <button class="button small bold hover"><a class="white text-decoration-none" href="/<%= this_user.username %>/profile/">Visualizar</a></button>
+                            <button class="button small bold hover"><a class="white text-decoration-none" href="/<%= this_user.username %>/profile">Visualizar</a></button>
                         </div>
                     </div>
                 </div>
