--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -77,7 +77,7 @@
                                 <img src="/img/people-icon.png">
                                 <span class="font chocolate-brown small">503 seguidores</span>
                             </div>
-                            <button class="button small bold hover"><a class="white text-decoration-none" href="/<%= this_user.username %>/profile">Visualizar</a></button>
+                            <a class="white text-decoration-none width-100" href="/<%= this_user.username %>/profile"><button class="button small bold hover width-100">Visualizar</button></a>
                         </div>
                     </div>
                 </div>
@@ -117,7 +117,7 @@
                     <div class="recipe box hover smallerhover">
                         <img class="recipe-img" src="<%= recipe.image %>">
                         <div class="recipe-text">
-                            <span class="chocolate-brown superbold"><%= recipe.name %></span>
+                            <span class="font chocolate-brown superbold"><%= recipe.name %></span>
                             <div class="recipe-info">
                                 <div class="icon-info">
                                     <img src="/img/icon-clock-green.png" alt="clock">
