--- a/src/views/edit_profile.ejs
+++ b/src/views/edit_profile.ejs
@@ -31,7 +31,8 @@
         <nav class="header navbar navbar-expand-lg">
             <div class="container-fluid padding-zero">
                 <div class="menu">
-                    <a class="padding-zero margin-zero" href="/<%= this_user.username %>/home"><img src="/img/logo-white-green.png" class="logo-icon"></a>
+                    <a class="padding-zero margin-zero" href="/<%= this_user.username %>/home"><img
+                            src="/img/logo-white-green.png" class="logo-icon"></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false"
                         aria-label="Toggle navigation">
@@ -42,8 +43,7 @@
                     <div class="collapse navbar-collapse center" id="navbarContent" style="">
                         <ul class="flex-row gap-20 padding-zero margin-zero">
                             <li class="center">
-                                <a class="font chocolate-brown superbold no-decoration"
-                                    href="/"><span>Sair</span></a>
+                                <a class="font chocolate-brown superbold no-decoration" href="/"><span>Sair</span></a>
                             </li>
                             <li class="center">
                                 <img src="img/icon-dark-mode-black.png">
@@ -56,18 +56,17 @@
     </header>
     <main class="min-100vh gap-30" id="profile">
         <div class="box edit-profile width-100 padding-zero">
-            <img class="main-img" src="/img/maria-c.jpg">
-            <div class="gap-30">
-                <div class="flex-column gap-20">
-                    <input type="text" placeholder="Maria Carolina Bevervanso" required>
-                    <textarea>Programadora iniciante buscando novas oportunidades e projetos para criar coisas novas.</textarea>
-                    <input type="email" placeholder="carolbeveer@gmail.com" required>
-                    <input type="date" value="2004-04-05" required>
+            <form action="/<%= this_user.username %>/edit-profile" method="post" class="width-100 gap-0">
+                <img class="main-img" src="<%= this_user.image %>">
+                <div class="flex-column gap-20 width-100 padding-3">
+                    <input class="font small" type="text" name="user_name" value="<%= this_user.name %>" required>
+                    <textarea class="font small" name="user_description"><%= this_user.description %></textarea>
+                    <input type="email" value="<%= this_user.email %>" name="user_email" required>
+                    <input type="date" value="<%= this_user.birthdate %>" name="user_birthdate" required>
+                    <button class="width-100" type="submit">Editar</button>
                 </div>
-                <div class="">
-                    <button class="width-100">Editar</button>
-                </div>
-            </div>
+
+            </form>
         </div>
     </main>
 </body>
