--- a/src/views/calendar.ejs
+++ b/src/views/calendar.ejs
@@ -53,7 +53,7 @@
             </div>
         </nav>
     </header>
-    <main class="min-100vh gap-30">
+    <main class="height-vh height-max gap-30">
         <div class="flex-row width-100 space-between">
             <span class="chocolate-brown big superbold font">Calendário</span>
             <span class="font yellow big superbold">Abril - 2024</span>
