working on dark mode on all pages

--- a/public/css/font_style.css
+++ b/public/css/font_style.css
@@ -50,6 +50,10 @@
     color: #462404;
 }
 
+main .chocolate-brown {
+    color: var(--body-color);
+}
+
 .info {
     text-decoration: none;
     color: gray;
