--- a/src/views/add_recipe.ejs
+++ b/src/views/add_recipe.ejs
@@ -200,6 +200,7 @@
     </main>
     <script src="/js/add_photo.js" defer></script>
     <script src="/js/add_recipe_information.js" defer></script>
+    <script src="/js/dark_mode.js" defer></script>
 </body>
 
 </html>
