--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -28,7 +28,7 @@
         <nav class="header navbar navbar-expand-lg">
             <div class="container-fluid padding-zero">
                 <div class="menu">
-                    <a class="padding-zero margin-zero" href="/"><img src="img/logo-white-green.png" class="logo-icon"></a>
+                    <a class="padding-zero margin-zero" href="/"><img src="img/logo-white-green.png" class="logo-icon hover"></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false"
                         aria-label="Toggle navigation">
@@ -39,15 +39,15 @@
                     <div class="collapse navbar-collapse center" id="navbarContent">
                         <ul class="flex-row gap-20 padding-zero margin-zero">
                             <li class="center">
-                                <a class="font chocolate-brown superbold no-decoration"
+                                <a class="hover font chocolate-brown superbold no-decoration"
                                     href="/login"><span>Entrar</span></a>
                             </li>
                             <li class="center">
-                                <a class="font chocolate-brown superbold no-decoration"
+                                <a class="hover font chocolate-brown superbold no-decoration"
                                     href="/signup-1"><span>Cadastrar</span></a>
                             </li>
                             <li class="center">
-                                <img src="img/icon-dark-mode-black.png">
+                                <img class="hover" id="dark_mode_icon" src="img/icon-dark-mode-0.png">
                             </li>
                         </ul>
                     </div>
@@ -98,6 +98,7 @@
 
         </div>
     </main>
+    <script src="/js/dark_mode.js" defer></script>
 </body>
 
 </html>
