--- a/src/views/profile.ejs
+++ b/src/views/profile.ejs
@@ -47,7 +47,7 @@
                                 <a class="font chocolate-brown superbold no-decoration hover" href="/"><span>Sair</span></a>
                             </li>
                             <li class="center">
-                                <img src="/img/icon-dark-mode-black.png" class="hover">
+                                <img class="hover" id="dark_mode_icon" src="/img/icon-dark-mode-0.png">
                             </li>
                         </ul>
                     </div>
@@ -73,7 +73,7 @@
 
                 <div class="gap-20">
                     <div class="flex-row gap-10 width-100 flex-start">
-                        <img class="icon-font fit-contain" src="/img/people-icon.png">
+                        <img class="icon-font fit-contain icon-color" src="/img/people-icon.png">
                         <span class="font chocolate-brown width-100">503 seguidores</span>
                     </div>
                     <a href="/<%= this_user.username %>/edit-profile"><button class="width-100 smallerhover">Editar</button></a>
@@ -131,6 +131,7 @@
             </div>
         </div>
     </main>
+    <script src="/js/dark_mode.js" defer></script>
 </body>
 
 </html>
