--- a/public/css/profile_style.css
+++ b/public/css/profile_style.css
@@ -47,7 +47,7 @@
 .calendar {
     display: grid;
 
-    grid-template-rows: 10% 18% 18% 18% 18% 18%;
+    grid-template-rows: 10% 15% 15% 15% 15% 15% 15%;
     grid-template-columns: repeat(7, 1fr);
 
     height: 100%;
@@ -66,14 +66,28 @@
     height: 100%;
 
     display: flex;
-    justify-content: flex-end;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: space-between;
     padding: 2%;
+}
+
+.day img {
+    height: 45%;
+    align-self: flex-start;
 }
 
 .off-day {
     height: 100%;
     background-color: #DBCBBC;
     border: 1px solid #5C5E22;
+}
+
+@media (max-width: 800px) {
+    .day {
+        justify-content: center;
+        align-items: center;
+    }
 }
 
 /* #profile > .edit-profile{
