--- a/src/views/calendar.ejs
+++ b/src/views/calendar.ejs
@@ -21,7 +21,8 @@
     <link rel="stylesheet" type="text/css" href="/css/profile_style.css">
     <link rel="stylesheet" type="text/css" href="/css/display_flex_style.css">
 
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="/css/style.css">
+    <link rel="stylesheet" type="text/css" href="/css/header_style.css">
     <title>Calendário</title>
 </head>
 
@@ -30,7 +31,8 @@
         <nav class="header navbar navbar-expand-lg">
             <div class="container-fluid padding-zero">
                 <div class="menu">
-                    <a class="padding-zero margin-zero" href="/home"><img src="/img/logo-white-green.png" class="logo-icon"></a>
+                    <a class="padding-zero margin-zero hover" href="/<%= this_user.username %>/home"><img src="/img/logo-white-green.png"
+                            class="logo-icon"></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false"
                         aria-label="Toggle navigation">
@@ -38,14 +40,13 @@
                     </button>
                 </div>
                 <span class="center">
-                    <div class="collapse navbar-collapse center" id="navbarContent" style="">
+                    <div class="collapse navbar-collapse center" id="navbarContent">
                         <ul class="flex-row gap-20 padding-zero margin-zero">
                             <li class="center">
-                                <a class="font chocolate-brown superbold no-decoration"
-                                    href="/"><span>Sair</span></a>
+                                <a class="font chocolate-brown superbold no-decoration hover" href="/"><span>Sair</span></a>
                             </li>
                             <li class="center">
-                                <img src="img/icon-dark-mode-black.png">
+                                <img src="/img/icon-dark-mode-black.png" class="hover">
                             </li>
                         </ul>
                     </div>
@@ -53,54 +54,40 @@
             </div>
         </nav>
     </header>
-    <main class="height-vh height-max gap-30">
+    <main class="height-vh height-min gap-30">
         <div class="flex-row width-100 space-between">
             <span class="chocolate-brown big superbold font">Calendário</span>
-            <span class="font yellow big superbold">Abril - 2024</span>
+            <span class="font yellow big superbold"><%= month_name %> - <%=  year %></span>
         </div>
         <div class="box width-100 height-100 padding-zero calendar">
-            <div class="day-week font white bold">Domingo</div>
-            <div class="day-week font white bold">Segunda</div>
-            <div class="day-week font white bold">Terça</div>
-            <div class="day-week font white bold">Quarta</div>
-            <div class="day-week font white bold">Quinta</div>
-            <div class="day-week font white bold">Sexta</div>
-            <div class="day-week font white bold">Sábado</div>
-            <div class="off-day"></div>
-            <div class="day green superbold font">1</div>
-            <div class="day green superbold font">2</div>
-            <div class="day green superbold font">3</div>
-            <div class="day green superbold font">4</div>
-            <div class="day green superbold font">5</div>
-            <div class="day green superbold font">6</div>
-            <div class="day green superbold font">7</div>
-            <div class="day green superbold font">8</div>
-            <div class="day green superbold font">9</div>
-            <div class="day green superbold font">10</div>
-            <div class="day green superbold font">11</div>
-            <div class="day green superbold font">12</div>
-            <div class="day green superbold font">13</div>
-            <div class="day green superbold font">14</div>
-            <div class="day green superbold font">15</div>
-            <div class="day green superbold font">16</div>
-            <div class="day green superbold font">17</div>
-            <div class="day green superbold font">18</div>
-            <div class="day green superbold font">19</div>
-            <div class="day green superbold font">20</div>
-            <div class="day green superbold font">21</div>
-            <div class="day green superbold font">22</div>
-            <div class="day green superbold font">23</div>
-            <div class="day green superbold font">24</div>
-            <div class="day green superbold font">25</div>
-            <div class="day green superbold font">26</div>
-            <div class="day green superbold font">27</div>
-            <div class="day green superbold font">28</div>
-            <div class="day green superbold font">29</div>
-            <div class="day green superbold font">30</div>
-            <div class="off-day"></div>
-            <div class="off-day"></div>
-            <div class="off-day"></div>
-            <div class="off-day"></div>
+            <div class="day-week font white bold"  data-day="D">Domingo</div>
+            <div class="day-week font white bold"  data-day="S">Segunda</div>
+            <div class="day-week font white bold"  data-day="T">Terça</div>
+            <div class="day-week font white bold"  data-day="Q">Quarta</div>
+            <div class="day-week font white bold"  data-day="Q">Quinta</div>
+            <div class="day-week font white bold"  data-day="S">Sexta</div>
+            <div class="day-week font white bold"  data-day="S">Sábado</div>
+
+            <% 
+            const month_days = new Date(year, month_num, 0).getDate();
+            const month_first_day = new Date(year, month_num - 1, 1).getDay();
+
+            for (let i = 0; i < month_first_day; i++) { %>
+                <div class="off-day"></div>
+            <% } 
+
+            for (let day = 1; day <= month_days; day++) { %>
+                <div class="day">
+                    <div class=" green superbold font hover"><%= day %></div>
+                    <img src="/img/plus-icon2.png" class="hover">
+                </div>
+            <% }
+
+            const month_last_day = new Date(year, month_num - 1, month_days).getDay();
+            const remaining_days = 42 - month_first_day - month_last_day;
+            for (let i = 0; i < remaining_days; i++) { %>
+                <div class="off-day"></div>
+            <% } %>
         </div>
     </main>
 
