--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -70,12 +70,12 @@
                     <div class="profile-text">
                         <div class="profile-text">
                             <span class="font chocolate-brown superbold"><%= this_user.name %></span>
-                            <span class="font green small">1 receitas</span>
+                            <span class="font green small"><%= count_recipes %> receitas</span>
                         </div>
                         <div class="profile-text">
                             <div class="followers">
                                 <img src="/img/people-icon.png">
-                                <span class="font chocolate-brown small">503 seguidores</span>
+                                <span class="font chocolate-brown small"><%= user_followers %> seguidores</span>
                             </div>
                             <a class="white text-decoration-none width-100" href="/<%= this_user.username %>/profile"><button class="button small bold hover width-100">Visualizar</button></a>
                         </div>
@@ -83,10 +83,10 @@
                 </div>
 
                 <div class="box flex-row gap-50">
-                    <div class="flex-column center hover">
+                    <a class="flex-column center hover" href="/<%= this_user.username %>/calendar">
                         <img src="/img/calendar-icon.png" alt="">
-                        <a class="font chocolate-brown small bold" href="">Calendário</a>
-                    </div>
+                        <span class="font chocolate-brown small bold">Calendário</span>
+                    </a>
                     <div class="flex-column center hover">
                         <img src="/img/users-icon.png" alt="">
                         <a class="font chocolate-brown small bold" href="">Comunidade</a>
@@ -129,8 +129,8 @@
                                 </div>
                             </div>
 
-                            <div class="favorite">
-                                <button class="hover"><img src="/img/star-icon.png" alt=""></button>
+                            <div class="favorite" >
+                                <button class="favorite-btn hover" data-recipe-id="<%= recipe.id_recipe %>"><img src="/img/star-icon.png" alt=""></button>
                             </div>
                         </div>
                     </div>
