--- a/public/css/home_style.css
+++ b/public/css/home_style.css
@@ -182,7 +182,7 @@ article {
     width: fit-content;
     background-color: #C08332;
     border-radius: 5px;
-    padding: 0 10px;
+    padding: 3px 10px;
 
     height: max-content;
 }
