--- a/src/views/profile.ejs
+++ b/src/views/profile.ejs
@@ -86,8 +86,8 @@
                 <span class="font chocolate-brown superbold big width-100">Meus tipos de receitas</span>
                 <div class="flex-row width-100 gap-10 flex-start flex-wrap">
                     <% user_types.forEach(type => { %>
-                        <div class="meal font bold small" style="background-color: <%= type.bg_color %>; color: <%= type.txt_color %>;">
-                            <span><%= type.name %></span>
+                        <div>
+                            <a style="background-color: <%= type.bg_color %>; color: <%= type.txt_color %>;" class="meal font bold small text-decoration-none" href=""><%= type.name %></a>
                         </div>
                     <% }) %>
                 </div>
@@ -97,8 +97,8 @@
                 <span class="font chocolate-brown superbold big width-100">Minhas refeições</span>
                 <div class="flex-row width-100 gap-10 flex-start flex-wrap">
                     <% user_meals.forEach(meal => { %>
-                        <div class="meal font bold small" style="background-color: <%= meal.bg_color %>; color: <%= meal.txt_color %>;">
-                            <span><%= meal.name %></span>
+                        <div>
+                            <a style="background-color: <%= meal.bg_color %>; color: <%= meal.txt_color %>;" class="meal font bold small text-decoration-none"><%= meal.name %></a>
                         </div>
                     <% }) %>
                 </div>
