Multer still not working

--- a/src/views/add_recipe.ejs
+++ b/src/views/add_recipe.ejs
@@ -60,7 +60,7 @@
         </nav>
     </header>
     <main>
-        <form action="/<%= this_user.username %>/add-recipe" method="post" class="recipes-box gap-40" >
+        <form action="/<%= this_user.username %>/add-recipe" method="post" enctype="multipart/form-data" class="recipes-box gap-40" >
             <div class="view-recipes-top flex-row">
                 <div class="view-recipes-header flex-column gap-30">
                     <div class="flex-column">
