working on edit recipe types and meals

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,6 +5,7 @@
     --box-border-color: #5C5E22;
     --icons-brightness: brightness(100%);
     --icons-saturation: saturate(100%);
+    --day-off-color: #DBCBBC;
 }
 
 .dark-mode:root {
@@ -14,6 +15,7 @@
     --box-border-color: #3E4018;
     --icons-brightness: brightness(400%);
     --icons-saturation: saturate(40%);
+    --day-off-color: #161515;
 }
 
 .icon-color {
