--- a/src/views/calendar.ejs
+++ b/src/views/calendar.ejs
@@ -46,7 +46,7 @@
                                 <a class="font chocolate-brown superbold no-decoration hover" href="/"><span>Sair</span></a>
                             </li>
                             <li class="center">
-                                <img src="/img/icon-dark-mode-black.png" class="hover">
+                                <img class="hover" id="dark_mode_icon" src="/img/icon-dark-mode-0.png">
                             </li>
                         </ul>
                     </div>
@@ -90,8 +90,7 @@
             <% } %>
         </div>
     </main>
-
-    </div>
+    <script src="/js/dark_mode.js" defer></script>
 </body>
 
 </html>
