--- a/public/css/profile_style.css
+++ b/public/css/profile_style.css
@@ -79,7 +79,7 @@
 
 .off-day {
     height: 100%;
-    background-color: #DBCBBC;
+    background-color: var(--day-off-color);
     border: 1px solid #5C5E22;
 }
 
