--- a/src/views/edit_profile.ejs
+++ b/src/views/edit_profile.ejs
@@ -64,7 +64,7 @@
                     <textarea class="font small" name="user_description"><%= this_user.description %></textarea>
                     <input type="email" value="<%= this_user.email %>" name="user_email" required>
                     <input type="date" value="<%= this_user.birthdate %>" name="user_birthdate" required>
-                    <button class="width-100 smallerhover" type="submit">Editar</button>
+                    <button class="width-100 smallerhover" type="submit">Salvar</button>
                 </div>
 
             </form>
