--- a/src/views/edit_recipe_type.ejs
+++ b/src/views/edit_recipe_type.ejs
@@ -9,7 +9,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
-    
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&display=swap"
@@ -32,7 +32,8 @@
         <nav class="header navbar navbar-expand-lg">
             <div class="container-fluid padding-zero">
                 <div class="menu">
-                    <a class="padding-zero margin-zero hover" href="/home/<%= this_user.username %>"><img src="/img/logo-white-green.png" class="logo-icon"></a>
+                    <a class="padding-zero margin-zero hover" href="/<%= this_user.username %>/home"><img
+                            src="/img/logo-white-green.png" class="logo-icon"></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false"
                         aria-label="Toggle navigation">
@@ -57,28 +58,31 @@
     </header>
     <main class="min-100vh">
         <div class="edit-recipe-type">
-            <div class="box gap-40">
-                <h2 class="font chocolate-brown bold big">Editar tipo de receita</h2>
-                <div class="recipe-type-name" >
-                    <input id="color-box" type="text" placeholder="Nome do tipo de receita">
-                </div>
-                <div class="flex-row type-select-color gap-30">
-                    <div class="color-select flex-column">
-                        <h3 class="chocolate-brown font bold">Cor de fundo:</h3>
-                        <input id="color-selector-background" type="color" value="#C08332">
+            <form action="/<%= this_user.username %>/edit-recipe-type/<%= user_types.id_type %>" method="post">
+                <div class="box gap-40">
+                    <h2 class="font chocolate-brown bold big">Editar tipo de receita</h2>
+                    <div class="recipe-type-name">
+                        <input id="color-box" type="text" placeholder="Nome do tipo de receita"
+                            value="<%= user_types.name %>">
                     </div>
-                    <div class="color-select flex-column">
-                        <h3 class="chocolate-brown font bold">Cor da fonte:</h3>
-                        <input id="color-selector-font" type="color" value="#ffffff">
+                    <div class="flex-row type-select-color gap-30">
+                        <div class="color-select flex-column">
+                            <h3 class="chocolate-brown font bold">Cor de fundo:</h3>
+                            <input id="color-selector-background" type="color" value="<%= user_types.bg_color %>">
+                        </div>
+                        <div class="color-select flex-column">
+                            <h3 class="chocolate-brown font bold">Cor da fonte:</h3>
+                            <input id="color-selector-font" type="color" value="<%= user_types.txt_color %>">
+                        </div>
                     </div>
-                </div>
-                <div class="hover save-button">
-                    <button>Salvar</button>
-                </div>
-                <div class="hover flex-row delete-icon">
-                    <img class="icon icon-color" src="/img/icon-delete.png">
-                </div>
-            </div>
+                    <div class="hover save-button">
+                        <button type="submit">Salvar</button>
+                    </div>
+                    <div class="hover flex-row delete-icon">
+                        <img class="icon icon-color" src="/img/icon-delete.png">
+                    </div>
+            </form>
+        </div>
         </div>
     </main>
 
